--- a/Week_4_5/public/index.css
+++ b/Week_4_5/public/index.css
@@ -10,10 +10,16 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 2rem 0;
 }
 #sequence-form {
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 li {
     white-space: pre;
+}
+table, th, td {
+    border-spacing: 5px 1rem;
+    padding: 5px 10px;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.9);
 }
